syntax = "proto3";

package banking;

option java_multiple_files = true;
option java_package = "com.deb.spring_boot_grpc_unary_server.officer";

message OfficerRequest {
    int32 id = 1;
}

message OfficerResponse {
    string name = 1;
    string rank = 2;
    string unit = 3;
}

service OfficerService {
    rpc GetOfficerInfo (OfficerRequest) returns (OfficerResponse);
}